# Frontdown

./: .clippy.toml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  button.raven  button.tsx  test.raven
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
benchmarks/comparison/: vs_rustc.sh  vs_typescript.sh
benchmarks/criterion/: codegen.rs  lexer.rs  parser.rs
docs/: book.toml
docs/src/: api-reference.md  architecture.md  cli.md  contributing.md  faq.md  getting-started.md  language-spec.md  migration-guide.md  repository-structure.md  stdlib.md
docs/theme/: README.md
examples/01-hello-world/: README.md
examples/01-hello-world/src/: app.raven
examples/02-todo-app/: README.md
examples/02-todo-app/src/components/: TodoList.raven
examples/02-todo-app/src/lib/: api.raven
examples/02-todo-app/src/pages/: index.raven
examples/03-blog/: README.md
examples/03-blog/src/: index.raven
examples/04-team-dashboard/: README.md
examples/04-team-dashboard/src/: dashboard.raven
examples/05-ecommerce/: README.md
examples/05-ecommerce/src/: storefront.raven
scripts/: benchmark.sh  install.ps1  install.sh  release.sh  setup-dev.sh  test-examples.sh
src/: ast.rs  codegen.rs  codegen_enhanced.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs
tests/common/: mod.rs
tests/fixtures/basic/: expected.tsx  input.raven
tests/fixtures/components/: button.raven
tests/fixtures/server_functions/: getUser.expected.ts  getUser.raven
tests/integration/: test_cli.rs  test_compilation.rs  test_project_build.rs
vscode-extension/: CHANGELOG.md  README.md  package.json
vscode-extension/src/: commands.ts  extension.ts  languageClient.ts
vscode-extension/src/syntax/: raven.tmLanguage.json
website/: package.json
website/components/: Nav.tsx
website/pages/: docs.tsx  examples.tsx  index.tsx  playground.tsx
website/pages/blog/: index.tsx
website/public/: README.md
