[package]
name = "ravensone"
version = "0.1.0"
edition = "2021"

authors = ["RavensOne Contributors <team@ravensone.dev>"]
description = "A unified programming language for full-stack web development."
license = "MIT"
repository = "https://github.com/jrezin1201/Frontdown"
documentation = "https://ravensone.dev/docs"
readme = "README.md"

[lib]
name = "ravensone"
path = "src/lib.rs"

[[bin]]
name = "raven"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5"



